# ATR-anon

./: .env.example  .gitignore  README.md  pyproject.toml
data/: persona_selection_formal20.json
data/few_shot_pool/rules_qc/: binding_sound_pool.json  counter_default_pool.json
data/few_shot_pool/test_session_gen/: index.json  rules.json
data/personas/anna_strahan/: rules.json  structured.json
data/personas/cassandra_tovar/: rules.json  structured.json
datagen/: _common.py  config.py  pipeline.py
datagen/episodes/: audit.py  compose.py
datagen/ingest/: ingest.py
datagen/rules/: gen.py  pipeline.py  qc.py
datagen/test_sessions/: gen.py  pipeline.py  qc.py  refine.py  static_check.py
docs/: REF_TYPE_SCHEMA.md
evaluator/: action_match.py  metrics.py  pipeline.py
lib/: compare_utils.py  llm.py  llm_anthropic_native.py  llm_deepseek.py  llm_gemini_native.py  llm_minimax.py  llm_openai_responses.py  llm_qwen.py  tokens.py
ontology/: tools.yaml
runner/: _abort.py  _constants.py  _prompts.py  manifest.py  memory.py  orchestrator.py  paths.py  pipeline.py  prompt_builder.py  route_agent_text.py  router.py  run_episode.py  schemas.py  user_sim.py
runner/cls_calibration/: cls_eval.py  test_set.jsonl
runner/environment/: __init__.py  _validators.py  base.py  tables.py
runner/prompts/: agent.md  classifier.md  router.md  user_sim.md
runner/router_calibration/: __init__.py  router_eval.py  span_test_set.jsonl  test_set.jsonl
scripts/: build_main_tables.py  render_prompts_to_latex.py
tools/: __init__.py  pretty_trace.py
(+1299 files in other folders)
