[project]
name = "atr"
version = "0.2.0"
description = "ATRBench — datagen pipeline and benchmark runner for the Ask-to-Remember (ATR) task"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "tenacity>=8.0.0",
    "click>=8.0.0",
    "pandas>=2.3.3",
    "pyarrow>=18.0.0",
    "rank-bm25>=0.2.2",
    "docstring-parser>=0.18.0",
    "rich>=13.0.0",
    # Pin explicitly: httpx's SOCKS-proxy support depends on socksio, which
    # was a transitive dep until rich's resolution pruned it — silently
    # breaking LLM calls when running behind a SOCKS proxy.
    "socksio>=1.0",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datagen", "runner", "lib", "evaluator", "tools"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
